test/tests/stages/11_long_integers/valid/implicit_casts/long_constants.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[34]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  const long(2147483647l)
  +
  const long(2147483647l)
  <
  const long(0l)
  )
  {
  return
  const int(1)
  ;
  }
  if
  (
  const int(19327352832)
  <
  const long(100l)
  )
  {
  return
  const int(2)
  ;
  }
  return
  const int(0)
  ;
  }
