test/tests/stages/11_long_integers/invalid_parse/long_constant_as_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  const long(10l)
  ;
  return
  const int(0)
  ;
  }
